[gd_scene load_steps=3 format=3 uid="uid://bjugcuetu5k4v"]

[ext_resource type="Script" uid="uid://fwosinmw50k5" path="res://scripts/menus/MainMenu.gd" id="1_bqojv"]
[ext_resource type="PackedScene" uid="uid://mq8yocpk7xke" path="res://scenes/background-particles/BackgroundParticles.tscn" id="2_ldf1p"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bqojv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.159283, 0.0082987, 0.128263, 1)

[node name="BackgroundParticles" parent="." instance=ExtResource("2_ldf1p")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="VersionLabelMarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 13.0
offset_bottom = 13.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6

[node name="VersionLabel" type="Label" parent="Control/VersionLabelMarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Square Loop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="Button" type="Button" parent="Control/MarginContainer/Panel/VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
text = "Start game"

[connection signal="pressed" from="Control/MarginContainer/Panel/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
